--- a/drivers/video/logo/Kconfig
+++ b/drivers/video/logo/Kconfig
@@ -27,6 +27,12 @@ config LOGO_LINUX_CLUT224
 	bool "Standard 224-color Linux logo"
 	default y
 
+config LOGO_MAXWELL2LITE_CLUT224
+        bool "Standard 224-color Maxwell 2 Lite logo"
+
+config LOGO_MAXWELL2PLUS_CLUT224
+        bool "Standard 224-color Maxwell 2 Plus logo"
+
 config LOGO_PIPO_CLUT224
 	bool "Standard 224-pipo Linux logo"
 	default n
