--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -143,6 +143,18 @@ config BATTERY_BQ20Z75
          Say Y to include support for TI BQ20z75 SBS-compliant
          gas gauge and protection IC.
 
+config BATTERY_BQ24196	
+	tristate "BQ24196 chargeIC driver"
+	help
+	  Say Y here to enable support for batteries with BQ24196 (I2C/HDQ) chips.
+
+config BATTERY_BQ24196_OTG_MODE
+	bool "BQ24196 otg output support"
+	depends on BATTERY_BQ24196
+	default n
+	help
+	  Say Y here to enable support for batteries with BQ24196 (I2C/HDQ) chips.
+
 config BATTERY_BQ27x00
 	tristate "BQ27x00 battery driver"
 	help
