Add claa070wp03 lcd driver

--- a/drivers/video/rockchip/screen/Kconfig
+++ b/drivers/video/rockchip/screen/Kconfig
@@ -36,6 +36,9 @@ config LCD_HSD100PXN
 config LCD_BYD8688FTGF
 	bool "RGB BYD 1024X600 8688FTGF"
 
+config LCD_CLAA070WP03
+	bool "RGB lcd_claa070wp03 800x1280 IPS"
+
 config LCD_B101AW06
 	bool "RGB Hannstar B101AW06(1024X600)"
 
