Fix HDMI source

--- a/arch/arm/configs/cyanogenmod_maxwell2lite_defconfig
+++ b/arch/arm/configs/cyanogenmod_maxwell2lite_defconfig
@@ -331,6 +331,7 @@ CONFIG_LCDC_RK30=y
 # CONFIG_FB_ROTATE is not set
 CONFIG_RK_HDMI=y
 CONFIG_HDMI_RK30=y
+CONFIG_HDMI_SOURCE_LCDC1=y
 CONFIG_RK_HDMI_CTL_CODEC=y
 CONFIG_RGA_RK30=y
 CONFIG_LOGO=y
