--- a/arch/arm/configs/cyanogenmod_maxwell2plus_defconfig
+++ b/arch/arm/configs/cyanogenmod_maxwell2plus_defconfig
@@ -329,6 +329,7 @@ CONFIG_FB_ROTATE=y
 CONFIG_ROTATE_ORIENTATION=180
 CONFIG_RK_HDMI=y
 CONFIG_HDMI_RK30=y
+CONFIG_HDMI_SOURCE_LCDC1=y
 CONFIG_RK_HDMI_CTL_CODEC=y
 CONFIG_RGA_RK30=y
 CONFIG_LOGO=y
