--- a/arch/arm/configs/cyanogenmod_maxwell2plus_defconfig
+++ b/arch/arm/configs/cyanogenmod_maxwell2plus_defconfig
@@ -430,6 +430,7 @@ CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 # CONFIG_RK29_IPP is not set
+CONFIG_RK_SN=y
 # CONFIG_CMMB is not set
 CONFIG_EXT3_FS=y
 # CONFIG_EXT3_FS_XATTR is not set
