--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -167,4 +167,6 @@ source "drivers/staging/mei/Kconfig"
 
 source "drivers/staging/nvec/Kconfig"
 
+source "drivers/staging/sn/Kconfig"
+
 endif # STAGING
