--- a/arch/arm/configs/cyanogenmod_maxwell2lite_defconfig
+++ b/arch/arm/configs/cyanogenmod_maxwell2lite_defconfig
@@ -26,7 +26,7 @@ CONFIG_ARCH_RK30=y
 CONFIG_RK_CLOCK_PROC=y
 CONFIG_CLK_SWITCH_TO_32K=y
 CONFIG_RK30_I2C_INSRAM=y
-# CONFIG_RK29_VPU is not set
+CONFIG_RK29_VPU=m
 CONFIG_MACH_RK30_MAXWELL2PLUS=y
 CONFIG_BQ_MAXWELL2LITE=y
 # CONFIG_BQ_MAXWELL2PLUS is not set
@@ -431,7 +431,7 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-# CONFIG_RK29_IPP is not set
+CONFIG_RK29_IPP=m
 CONFIG_RK_SN=y
 # CONFIG_CMMB is not set
 CONFIG_EXT3_FS=y
