Don't build rk29-ipp and vpu_service as modules

--- a/arch/arm/configs/cyanogenmod_maxwell2lite_defconfig
+++ b/arch/arm/configs/cyanogenmod_maxwell2lite_defconfig
@@ -25,7 +25,7 @@ CONFIG_ARCH_RK30=y
 CONFIG_RK_CLOCK_PROC=y
 CONFIG_CLK_SWITCH_TO_32K=y
 CONFIG_RK30_I2C_INSRAM=y
-CONFIG_RK29_VPU=m
+CONFIG_RK29_VPU=y
 CONFIG_MACH_RK30_MAXWELL2PLUS=y
 CONFIG_BQ_MAXWELL2LITE=y
 # CONFIG_BQ_MAXWELL2PLUS is not set
@@ -430,7 +430,7 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_RK29_IPP=m
+CONFIG_RK29_IPP=y
 CONFIG_RK_SN=y
 # CONFIG_CMMB is not set
 CONFIG_EXT3_FS=y
