--- a/arch/arm/configs/cyanogenmod_maxwell2lite_defconfig
+++ b/arch/arm/configs/cyanogenmod_maxwell2lite_defconfig
@@ -44,6 +44,7 @@ CONFIG_AEABI=y
 # CONFIG_OABI_COMPAT is not set
 CONFIG_HIGHMEM=y
 CONFIG_COMPACTION=y
+CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
@@ -216,6 +217,7 @@ CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_UEVENT=y
 CONFIG_NETDEVICES=y
+CONFIG_TUN=y
 CONFIG_PHYLIB=y
 # CONFIG_NETDEV_1000 is not set
 # CONFIG_NETDEV_10000 is not set
@@ -432,6 +434,7 @@ CONFIG_RTC_CLASS=y
 CONFIG_AUTO_WAKE_UP=y
 CONFIG_TPS65910_RTC=y
 CONFIG_STAGING=y
+CONFIG_ZRAM=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_LOGGER=y
